title page complete

--- a/index.html
+++ b/index.html
@@ -12,55 +12,65 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="header_content">
         <p>Usage of Cascade Style Sheets</p>
         <p>- 02</p>
       </div>
     </header>
     <main>
-      <div>
-        <img
-          src="/assets/images/351322367_245022038135748_1556129062014994545_n (1).jpg"
-          alt="My_photo"
-        />
-        <img
-          src="/assets/images/351322367_245022038135748_1556129062014994545_n (1)-modified.jpg"
-          alt="My_photo"
-        />
+      <div class="profile_container">
+        <div class="profile_image_container">
+          <img
+            class="main_image"
+            src="/assets/images/351322367_245022038135748_1556129062014994545_n (1)-modified.jpg"
+            alt="My_photo"
+          />
+          <img
+            class="second_image"
+            src="/assets/images/351322367_245022038135748_1556129062014994545_n (1).jpg"
+            alt="My_photo"
+          />
+        </div>
+        <div class="profile_details">
+          <div>
+            <h1>Chathura Lakmina</h1>
+            <ul class="details">
+              <li>Index Number -</li>
+              <li>Batch - GDSE70</li>
+            </ul>
+          </div>
+          <div class="social_icons">
+            <a
+              href="https://web.facebook.com/chathura.lakmina.14/"
+              target="_blank"
+            >
+              <i class="fa-brands fa-facebook"></i>
+            </a>
+            <a href="" target="_blank">
+              <i class="fa-brands fa-instagram"></i>
+            </a>
+            <a href="https://wa.me/94770464448" target="_blank">
+              <i class="fa-brands fa-whatsapp"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/chathura-lakmina-72368b322/"
+              target="_blank"
+            >
+              <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="https://github.com/Chathura0607" target="_blank"
+              ><i class="fa-brands fa-github"></i
+            ></a>
+            <a href="mailto:chathuhiru45@gmail.com" target="_blank"
+              ><i class="fa-solid fa-envelope"></i
+            ></a>
+          </div>
+        </div>
       </div>
-      <div>
-        <h1>Chathura Lakmina</h1>
-        <ul>
-          <li>Index Number -</li>
-          <li>Batch - GDSE70</li>
-        </ul>
-      </div>
-      <div class="social_icons">
-        <a href="https://web.facebook.com/chathura.lakmina.14/" target="_blank">
-          <i class="fa-brands fa-facebook"></i>
-        </a>
-        <a href="" target="_blank">
-          <i class="fa-brands fa-instagram"></i>
-        </a>
-        <a href="https://wa.me/94770464448" target="_blank">
-          <i class="fa-brands fa-whatsapp"></i>
-        </a>
-        <a
-          href="https://www.linkedin.com/in/chathura-lakmina-72368b322/"
-          target="_blank"
-        >
-          <i class="fa-brands fa-linkedin"></i>
-        </a>
-        <a href="https://github.com/Chathura0607" target="_blank"
-          ><i class="fa-brands fa-github"></i
-        ></a>
-        <a href="mailto:chathuhiru45@gmail.com" target="_blank"
-          ><i class="fa-solid fa-envelope"></i
-        ></a>
-      </div>
-      <div>
+
+      <div class="assignment">
         <h2>Assignment - 02</h2>
-        <nav>
+        <nav class="content_links">
           <ul>
             <li><a href="/pages/case1.html" target="_blank">Case 1</a></li>
             <li><a href="/pages/case2.html" target="_blank">Case 2</a></li>
