--- a/pages/case1.html
+++ b/pages/case1.html
@@ -4,6 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Case - 1</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link rel="stylesheet" href="/css/case1.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="item_list">
+      <div class="item">
+        <p>Menu One</p>
+        <i class="fa-solid fa-address-book"></i>
+      </div>
+      <div class="item">
+        <p>Menu Two</p>
+        <i class="fa-solid fa-truck-medical"></i>
+      </div>
+      <div class="item">
+        <p>Menu Three</p>
+        <i class="fa-solid fa-book-atlas"></i>
+      </div>
+      <div class="item">
+        <p>Menu Four</p>
+        <i class="fa-solid fa-layer-group"></i>
+      </div>
+      <div class="item">
+        <p>Menu Five</p>
+        <i class="fa-solid fa-cart-arrow-down"></i>
+      </div>
+    </div>
+  </body>
 </html>
